# encfs

./: .licenserc.yaml  CMakeLists.txt  README.md  encfs.cc  encfs.h  encfs.mk  encfs_test.cc
.github/actions/build-folly/: action.yml
.github/actions/install-cmake-on-macos/: action.yml
.github/actions/install-jdk8-on-macos/: action.yml
.github/actions/post-steps/: action.yml
.github/actions/pre-steps/: action.yml
.github/actions/pre-steps-macos/: action.yml
.github/actions/setup-folly/: action.yml
.github/workflows/: build-fuzzers.yml  jobs-java.yml  jobs-linux-arm.yml  jobs-linux-no-test-run.yml  jobs-linux-other-checks.yml  jobs-linux-run-tests-san.yml  jobs-linux-run-tests.yml  jobs-macos.yml  nightly.yml  sanity_check.yml  standardization_lint.yaml
